--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>project-two</title>
+    <link rel="stylesheet" href="style.scss">
+    <title>deezer-radio-app</title>
   </head>
   <body>
     <div id="root"></div>
